--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,8 @@
 
+  ## 6/3/2023 - [美国国务院在天安门事件34周年发表声明
+
+](https://www.voachinese.com/a/us-statement-on-tiananmen-square-massacre-20230603/7121838.html)
+ ```美国国务院在天安门事件34周年来临之际发表声明，强调不会忘记事件罹难者的英勇，将继续推动中国以及世界各地的人权与自由。```0
   ## 6/3/2023 - [美国制裁后，苏丹战斗恶化](https://www.voachinese.com/a/fighting-worsens-in-sudan-20230603/7121827.html)
  ```苏丹首都喀土穆地区星期五遭受炮击，交战双方的战斗加剧，美国之前在美国与沙特阿拉伯协调的停火瓦解后实施了制裁。```0
   ## 6/3/2023 - [以色列同埃及爆发边境冲突，造成4名军人死亡](https://www.voachinese.com/a/israel-egypt-border-clash-20230603/7121803.html)
@@ -38,5 +42,3 @@
  ```美国与台湾星期四(6月1日)在华盛顿签署美台《21世纪贸易倡议》首批协定，双方在全部12个议题中的五个议题达成共识。美台官员都表示，这是一个有助于加强并深化彼此经贸关系的重要里程碑。```0
   ## 6/2/2023 - [美军最高将领：艾布拉姆斯坦克和F-16飞机是为了长期援乌，而非用于即将发动的反攻](https://www.voachinese.com/a/us-tanks-f-16s-part-of-long-term-aid-for-ukraine-not-upcoming-offensive-20230602/7121063.html)
  ```美国参谋长联席会议主席、陆军上将马克·米利说，培训乌克兰军队使用先进的美制艾布拉姆斯坦克的工作已经开始，这些武器从长期来讲是把俄罗斯赶出乌克兰被占领土的关键，但是来不及用于基辅即将展开的反攻。```0
-  ## 6/2/2023 - [美中情局长伯恩斯秘密访华，再促两国关系融冰](https://www.voachinese.com/a/cia-dir-burns-secret-china-visit-shows-us-china-will-improve-relation-20230602/7120539.html)
- ```美国中央情报局局长伯恩斯上个月曾秘密前往北京，这是拜登政府官员近年来对中国的最高级别访问。美中关系的观察人士认为，伯恩斯的秘密出访显示美中双方都有意缓和紧张关系。```0
