--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,10 @@
 
+  ## 6/3/2023 - [六四34周年：六四纪念在今日台湾意味着什么？](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E5%9C%A8%E4%BB%8A%E6%97%A5%E5%8F%B0%E6%B9%BE%E6%84%8F%E5%91%B3%E7%9D%80%E4%BB%80%E4%B9%88)
+ ```1989年春夏之交，由青年学生率先在北京发起的中国民主运动以及它随后遭遇的血腥镇压曾吸引全球华语世界的广泛关注，也在一定程度上对当时尚未走出动员戡乱时期的台湾社会产生影响。34年后，在民主体制日渐成熟，本土意识也日渐成型的台湾，八九六四意味着什么 ?台湾华人民主书院理事长曾建元先生接受本台电话采访，介绍了台湾人权团体今年的六四纪念活动，也特别介绍了八九六四与1990年台湾野百合学生运动的关系。曾建元先生表示，台北的六四纪念已经从三十几年前那种纯粹的纪念六四或声讨中共，慢慢变成一个以人权、民主为中心的活动，让台湾人除了反省自身的民主化历程、关心中国大陆的发展，也把视野放到全世界其它正在为民主奋斗的国家。```0
+  ## 6/3/2023 - [美国华人纪念六四34周年三大亮点：六四纪念馆开幕，铁链女雕像落成，走线者积极参与](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E5%8D%8E%E4%BA%BA%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4%E4%B8%89%E5%A4%A7%E4%BA%AE%E7%82%B9-%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E9%A6%86%E5%BC%80%E5%B9%95%EF%BC%8C%E9%93%81%E9%93%BE%E5%A5%B3%E9%9B%95%E5%83%8F%E8%90%BD%E6%88%90%EF%BC%8C%E8%B5%B0%E7%BA%BF%E8%80%85%E7%A7%AF%E6%9E%81%E5%8F%82%E4%B8%8E)
+ ```六四屠杀34周年到来之际，美国华人开展各种形式的纪念活动。在首都华盛顿、纽约、旧金山、洛杉矶等华人聚居的城市，除了像往年一样，举办烛光晚会悼念六四屠杀的死难者，今年的纪念活动，还有多处亮点，其中包括：海外第一座六四纪念馆在纽约开幕，铁链女雕像在洛杉矶自由雕塑公园落成，有大批到达美国的“走线者”积极参加各地六四纪念活动。```0
+  ## 6/3/2023 - [民运人士在柏林举办“六四”34周年纪念活动](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%B0%91%E8%BF%90%E4%BA%BA%E5%A3%AB%E5%9C%A8%E6%9F%8F%E6%9E%97%E4%B8%BE%E5%8A%9E-%E5%85%AD%E5%9B%9B-34%E5%91%A8%E5%B9%B4%E7%BA%AA%E5%BF%B5%E6%B4%BB%E5%8A%A8)
+ ```6月3日，德国首都柏林又出现了民运人士举办的六四纪念活动。在中国驻柏林大使馆门前的Jannowitz大桥上，全球支持中国和亚洲民主化论坛、民主中国阵线、中国共和党和德国中国学生学者联合会共同举办了“六四”34周年纪念活动。```0
   ## 6/3/2023 - [彭立发、张展、李康梦获提名角逐诺贝尔和平奖](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%BD%AD%E7%AB%8B%E5%8F%91-%E5%BC%A0%E5%B1%95-%E6%9D%8E%E5%BA%B7%E6%A2%A6%E8%8E%B7%E6%8F%90%E5%90%8D%E8%A7%92%E9%80%90%E8%AF%BA%E8%B4%9D%E5%B0%94%E5%92%8C%E5%B9%B3%E5%A5%96)
  ```在天安门事件34周年前夕，美国国会暨行政当局中国委员会（CECC）两党领袖6月2日发表书面声明纪念天安门大屠杀事件34周年。他们还宣布增加提名北京四通桥抗议事件主彭立发、公民记者张展以及南京传媒学院学生李康梦等角三人为2023年诺贝尔和平奖候选人。因为“这些英雄的勇气应该要得到全世界的嘉奖。”```0
   ## 6/3/2023 - [法记者：记住当年只身阻挡坦克的中国年轻人](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20230603-%E6%B3%95%E8%AE%B0%E8%80%85-%E8%AE%B0%E4%BD%8F%E5%BD%93%E5%B9%B4%E5%8F%AA%E8%BA%AB%E9%98%BB%E6%8C%A1%E5%9D%A6%E5%85%8B%E7%9A%84%E4%B8%AD%E5%9B%BD%E5%B9%B4%E8%BD%BB%E4%BA%BA)
@@ -53,9 +59,3 @@
  ```消息称中国短影音社群平台“抖音”在六四前夕，私下向各大网红与品牌方发布禁令，要求在3至5日这段期间，禁止发布他们列出一系列与六四有关的敏感图文。所列敏感涉及成龙等引发疑问。```0
   ## 6/3/2023 - [泽连斯基承认乌战结束前无可能加入北约](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E6%89%BF%E8%AE%A4%E4%B9%8C%E6%88%98%E7%BB%93%E6%9D%9F%E5%89%8D%E6%97%A0%E5%8F%AF%E8%83%BD%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6)
  ```乌克兰总统泽连斯基承认，在目前与俄罗斯的战争结束之前，乌克兰所坚持的加入北约是"不可能的"。但乌克兰申请加入北约的成员资格问题还是会在7月于立陶宛举行的北约峰会上再次被辩论。```0
-  ## 6/3/2023 - [洪都拉斯任命一顶级医学家任驻华大使](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E6%B4%AA%E9%83%BD%E6%8B%89%E6%96%AF%E4%BB%BB%E5%91%BD%E4%B8%80%E9%A1%B6%E7%BA%A7%E5%8C%BB%E7%94%9F%E4%BB%BB%E9%A9%BB%E5%8D%8E%E5%A4%A7%E4%BD%BF)
- ```洪都拉斯总统XiomaraCastro宣布，被视为世界领先的医学研究人员之一的SalvadorMoncada博士已被洪都拉斯任命为驻中国大使。洪都拉斯去年3月在牺牲台湾的情况下承认北京。据法新社说，洪都拉斯新大使还具有英国身份，他的夫人是比利时前国王的小女儿。```0
-  ## 6/3/2023 - [美国CIA局长密访了中国](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E6%83%85%E6%8A%A5%E6%80%BB%E7%9B%91%E5%AF%86%E8%AE%BF%E4%BA%86%E4%B8%AD%E5%9B%BD)
- ```美国拜登政府急切希望与中国重新恢复对话。在美国国防部长奥斯汀出席新加坡香格里拉安全对话论坛主动与中国国防部长李尚福握手互动消息传出之前，美国中央情报局局长伯恩斯被爆料数日前曾秘密访问北京。美国强调与中国高层对话具有重要意义。```0
-  ## 6/3/2023 - [印度重大铁路事故死亡人数升至288人，850人受伤](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20230603-%E5%8D%B0%E5%BA%A6%E9%87%8D%E5%A4%A7%E9%93%81%E8%B7%AF%E4%BA%8B%E6%95%85%E6%AD%BB%E4%BA%A1%E4%BA%BA%E6%95%B0%E5%8D%87%E8%87%B3288%E4%BA%BA%EF%BC%8C850%E4%BA%BA%E5%8F%97%E4%BC%A4)
- ```印度周五（6月2日）晚间发生三辆火车相撞重大事故，救灾官员表示，已知造成至少288人死亡，850人受伤，死伤人数仍在攀升，这是印度逾20年来最惨重的铁路事故。```0
