--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [从柏林到巴黎，六四悼念不停息：欧洲多地举行六四周年纪念活动](https://www.voachinese.com/a/from-berlin-to-paris-june-4th-memorial-events-20230603/7121857.html)
+ ```在六四事件34周年前夕，包括德国柏林、荷兰阿姆斯特丹、法国巴黎等地都举办悼念活动。在“白纸运动”后的第一个六四纪念日，一些90后年轻人加入了抗议的行列。```0
   ## 6/3/2023 - [美国国务院在天安门事件34周年发表声明
 
 ](https://www.voachinese.com/a/us-statement-on-tiananmen-square-massacre-20230603/7121838.html)
@@ -40,5 +42,3 @@
  ```美国财政部说，财政部副部长杰伊·尚博格星期五(6月2日)会晤了新任中国驻美大使谢锋并进行了讨论，旨在保持这两个世界最大经济体沟通渠道的畅通。```0
   ## 6/3/2023 - [美台签署21世纪贸易倡议首批协定，中国批美以经贸幌子对台“敲骨吸髓”](https://www.voachinese.com/a/us-taiwan-signed-trade-deal-which-beijing-said-it-strongly-opposes-20230602/7121058.html)
  ```美国与台湾星期四(6月1日)在华盛顿签署美台《21世纪贸易倡议》首批协定，双方在全部12个议题中的五个议题达成共识。美台官员都表示，这是一个有助于加强并深化彼此经贸关系的重要里程碑。```0
-  ## 6/2/2023 - [美军最高将领：艾布拉姆斯坦克和F-16飞机是为了长期援乌，而非用于即将发动的反攻](https://www.voachinese.com/a/us-tanks-f-16s-part-of-long-term-aid-for-ukraine-not-upcoming-offensive-20230602/7121063.html)
- ```美国参谋长联席会议主席、陆军上将马克·米利说，培训乌克兰军队使用先进的美制艾布拉姆斯坦克的工作已经开始，这些武器从长期来讲是把俄罗斯赶出乌克兰被占领土的关键，但是来不及用于基辅即将展开的反攻。```0
