--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,4 +1,6 @@
 
+  ## 6/3/2023 - [中国大使馆前“六四大屠杀34周年纪念会” 年轻人为主](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy2-06032023190759.html)
+ ```由全美中国学生学者自治联合会主办的“六四大屠杀34周年纪念会”，6月3日下午2点在中国驻美大使馆门前的广场举行。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会，其中尤以年轻人为主。 不受雷雨阻挡年轻世代参与纽约六四游行民主女神像前华盛顿举办六四烛光悼念活动纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报导：接过广场上话筒的女青年 这是一场坚持了三十四年的集会。主办者依然是全美学自联。今年的纪念会依然是在华盛顿中国驻美大使馆前，但已经从使馆对面的街心花园挪到了紧靠花园的马路边上，地界更为开阔；参会人员在马路和人行道上铺开，显得更有气势。由于去年底发生了席卷全国多个城市、以青年人为主的白纸运动，今年的六四大屠杀纪念会尤其强调了年轻人在民主运动中的作用。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会(记者王允拍摄)全美学自联理事、佐治亚大学博士生古懿在开幕词中引用了从美国哥伦比亚大学传出的诗句，“我们是广场上的遗孤，我们是野火后的新芽，”“我们在方舱里自救，我们在铁链下自由，”“我们曾经站在坦克前，我们也曾经站在四通桥上，我们今天依旧站在这里，我们明天还要站到你们面前。”中国民主运动海外联席会议主席魏京生也在发言中为新生代民主力量的崛起而感到欣慰，他说，“现在的年轻人有没出息的，但也有有出息的，就像今天来的年轻人，都是有出息的。”这句话引来众人热烈的掌声。中国民主运动海外联席会议主席魏京生（中）集会现场讲话（记者王允拍摄）这次参会的有不少是从纽约等美国各地赶来的中国民众。据在场的中国民主党全国委员会主席王军涛介绍，这次从纽约就来了17辆各种类型的轿车，总共98人。记者在现场看到，其中多是青年人的面孔。年仅18岁的中国留学生朱欣海更是远道从南面的得克萨斯州休斯敦赶来。他在会议上发言说，“我相信三十四年后的中国年轻人，他们依然是有种的，我相信他们依然是一群有希望的人。”他说，从去年大学校园里年轻人举起白纸的手中，他看到了希望，这一切都表达了中国年轻人的反抗精神。中国留学生朱欣海(记者王允拍摄)与以往不同的是，今年的全美学自联自由精神奖特别颁发给了两个人，一位是去年10月据传在北京四通桥上挂出要求习近平下台横幅的彭立发，另一位是多年来以网名“编程随想”撰写批评中国政府文章并广泛散发的阮晓寰。中国民主党全委会执行长陈闯创律师在给至今还在狱中的阮晓寰颁奖时说，“通过这种匿名的表达，匿名的身份，阮晓寰能够独立思考，不受外界的干扰和压力的影响，这种勇于表达并坚持个人观点的行为，体现了他对自由思想和言论的尊重和追求。在隐私权和互联网自由已经成为当下这个时代非常重要的课题的时候，阮晓寰可以说是个指路明灯。”在纪念仪式结束后，参加集会的二十多人把印有悼念六四罹难者的“国殇之柱”的巨幅招贴布完全牵引开来，从中国大使馆前的道路上缓缓走过。有一些片刻，招贴画上的“国殇之柱”顶端正对着中国大使馆楼顶飘扬的中国国旗。 活动现场照片(记者王允拍摄)记者：王允   编辑：梒青   网编：杰西```0
   ## 6/3/2023 - [不受雷雨阻挡  年轻世代参与纽约六四游行](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06032023115304.html)
  ```本周五，纽约曼哈顿市区举办了一场纪念1989年天安门事件的游行，游行队伍中，不乏有些未亲身经历过六四事件的中国年轻人，他们是怎么知道六四运动的？他们又背负着什么样的故事走上纽约街头？ 纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四纪念馆召开揭幕记者会　王丹：为未来储备动力专栏|周末茶馆：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 “打倒共产党！打倒法西斯！勿忘六四！血债血偿！”在倾盆大雨中，盼望中国民主化的民众在纽约曼哈顿市中心坚定地喊着。在六四事件34周年前夕，中国民主党在纽约组织了一场游行，纪念1989年的民主运动。这场游行由纽约六四纪念馆出发，一路经过热闹的纽约市区前往中国驻纽约总领事馆外抗议，这场游行中不乏有年轻支持者。 中国青年：中国政府不该掩盖历史事实周围朋友都不知道六四“30多年后的今天，我们过来纪念。我们永远不会忘记六四，我们觉得未来还是会变的，我们抱着很大的希望，想要中国变得越来越好。”参与此次游行的布鲁（Blue）是一名在美国求学的23岁的中国留学生，他告诉本台记者，在共产党倒台之前，他都不打算回中国，而基于安全问题，布鲁不愿意透露真实姓名。布鲁表示，他在新冠疫情爆发时申请到了护照，便迅速飞离中国：“我经常看YouTube（油管）节目，翻翻推特。就觉得中国以后可能跟西方完全脱钩，之后就闭关锁国，以后再出来就不太容易了，所以当时就比较紧张，能出来就赶快要出来。”布鲁说道，他是因为使用翻牆工具才对六四事件有所了解，不然其实他身边的年轻人都不清楚六四事件：“像国内的很多人他们不知道中国政府有这么多不为人知的一面，很多人不知道真实的历史，像八九六四，我在大学的时候问他们，他们根本就不知道这些事情，很多人不知道新疆屠杀之类的。” 6月2日晚间，中国民主党在纽约曼哈顿市区发起六四游行（记者唐缘媛摄） 中国留学生：白纸运动鼓励我勇敢站出来另一位参与游行的中国留学生小花今年24岁，她告诉本台记者，她是在高中时读到一篇英文论文，才知道了1989年民主运动：“我其实在白纸运动之前就一直很关注一些社会运动的东西，也是白纸运动之后（让我）感觉到更加安全，更加没有那么孤独，可以来参加这些公开悼念活动。”同样基于安全原因，小花不愿意透露真实姓名。小花表示，她很担心参与相关活动会影响到在国内的家人，但是她还是想为中国民主出一份微薄之力：“不应该因为很恐惧就不做事情，而且这也不算在做事情，我只是来参加活动而已。这就是能做到最少的。” 美国公民参与六四游行：我爱中华文化但是中国需要改变与此同时，美国公民阿里（Ali）与他的家人也在中途加入游行，阿里说他的女朋友是中国人，因此他也想为中国的民主化进程出一份力：“美国不是一个完美的国家，但是中国做的事惨无人道。我爱中国这个国家，也爱中国文化，但是我们需要巨大的改变。……我在路上看到这个游行，并问了参与者这个游行有关什么，听完后我就决定加入。”王军涛：每个世代都在用自己的方式追求民主中国针对有青年共同参与游行活动，六四游行发起人、中国民主党全国委员会共同主席王军涛表示，不同世代关注的议题可能不同，身上所背负的历史包袱也不一样，因此年轻世代并非此次游行的主要支持者，不过年轻世代也在以自己的方式争取自由中国。王军涛说：“如果你在这边看到年轻人，你不应该（感到）奇怪，因为我们共同的理想、共同的目标，也感同身受到一个专制暴政的压迫。但是，如果你（在这边）看到的年轻人少，你也不要（感到）奇怪，他们其实也在用他们的方式进行活动。” 记者：唐缘媛   责编：梒青   网编：杰西```0
   ## 6/3/2023 - [民主女神像前 华盛顿举办六四烛光悼念活动](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy-06032023092053.html)
@@ -27,5 +29,3 @@
  ```六四天安门34周年前夕，中国民运人士王丹受邀前往丹麦，参加哥本哈根民主高峰会。为期一周的欧洲行，王丹不但会见捷克总统帕维尔，针对中国问题交换看法外，也向德国自民党人权发言人海特提出，希望德国议会关注许志永等人权案件，并向中国施压。 海外华人连署许志永、丁家喜竞取诺贝尔和平奖专访丁家喜妻子罗胜春：中国政府在制造冤假错案郭飞雄被以"煽颠罪"重判　国际舆论呼吁放人海外民主人士推动许志永、丁家喜角逐诺贝尔和平奖联合国谴责中国重判许志永丁家喜　美国务院要求立即释放二人 非政府组织民主联盟基金会（AllianceofDemocracies）五月中举办第六届「哥本哈根民主高峰会」（CopenhagenDemocracySummit），除了台湾总统蔡英文透过视频在高峰会发表谈话，北约前秘书长、丹麦前总理拉斯穆森（AndersFoghRasmussen）也邀请中国民运人士，同时也是前六四学生领袖王丹与会。期间，王丹曾与捷克总统彼得·帕维尔（PetrPavel）针对中国问题交换看法。王丹：“比较核心的一点，他就提到现在欧洲国家在欧洲对华政策的制订上遇到一个问题，这个问题就是很多的欧洲国家是希望中国出来调停俄乌战争的，虽然他个人对此不是那么有信心，但必须正视这个现实。他问我怎么看，我说(中国)绝对不可能(调停)。“虽然捷克总统对中国持疑，然而王丹观察，更多欧洲政客或智库人员，选择相信中国，对习近平有所求，因此对华政策调整有限，但已经有进步。王丹：“这次我到欧洲，见到的国会议员和政要们，几乎很少听到要跟中国保持友好，最低都是保持竞争和警剔的态度。“王丹：“西方不该对中国人权灾难保持冷漠”而王丹也在德国针对人权问题，拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（音译，PeterHeidt）。 前六四学运领袖王丹拜会德国自民党（FDP）人权发言人、国会议员彼得.海特（PeterHeidt）。（照片经王丹授权使用） 王丹：“我跟他们讲，发生的基本就是人权灾难，我觉得西方社会应该要有自己的人权坚持，不应该对这种人权灾难保持冷漠，我也特别列举几个案子，例如许志永、丁家喜的案子，例如说最近的案子，郭飞雄被重判的案子。““六四纪念馆”假帐号两天出现九个在结束欧洲行之际，王丹发现六四34周年前夕，开始有人针对当年的六四学运提出质疑。王丹：“我觉得事情过去34年，回头反思，有人会批評当初这些学生太激进，但我现在反思的结果，正好相反，我觉得当年的学生太理性。其实面对这样一个政权，我们当初犯的是跟现在西方政客一样的错误，就是以为对方是可以理性的，和平交谈的对象，但历史已经证明，根本就不是嘛，当年的学生那么的理性，结果换来的还是镇压。“另外，即将在美国曼哈顿开幕六四纪念馆，短短两天之内，居然在臉書、推特上出现九个假账号。 六四纪念馆将在今年六月四日开幕，近日却出现大量假帐号。（图/翻摄自王丹脸书照片经授权使用） 王丹：“这当然不可能是一般网民自发的行为，这显然是中共相关部门、情报部门、其它部门，专门组织集团性的破坏。”而这些假帐号不但意图混淆视听，王丹也担心中国网军试图用钓鱼的方式，钓出支持群众，不得不提防。 记者：郭宸绮  责编:嘉远  网编:何足```0
   ## 6/1/2023 - [中国拒绝美中防长会晤　李尚福现身新加坡](https://www.rfa.org/mandarin/yataibaodao/junshiwaijiao/hx2-06012023114156.html)
  ```本周四，美国国防部长奥斯汀在东京举行美日防长会谈前重申了反对片面改变台湾现状，以及中国不应动用武力统一台湾等美方立场。中国防长李尚福则在拒绝与奥斯汀在香格里拉对话会举行双边会谈后转而与新加坡防长签署合作备忘录，并宣布两国成立热线。有学者指出，中方针对周边国家向美国靠拢，也在加紧展现外交拉拢姿态。 李尚福出任中国国防部长　美中军事交流何去何从？受美制裁上将成中国新任防长美中未来如何对话？ 美国国防部长奥斯汀（LloydAustin）展开任内对印太地区的第7次访问。他6月1日先前往东京，与日本防卫大臣滨田靖一会谈；2日出席新加坡第20届“香格里拉”对话会并将发表演说；此后，还将访问印度和法国。美国国防部5月29日表示，中国已拒绝美方提出在香格里拉场边举行两国防长会议的邀请。尽管美方事前通知中方，对中国国国防部长李尚福的制裁不妨碍美中两国防长会晤。美国国防部长奥斯汀（LloydAustin）展开任内对印太地区的第7次访问。6月1日，奥斯汀在东京与日本防卫大臣滨田靖一会谈。（路透社视频截图）中方：对话不能没有原则 美方：遗憾中国国防部发言人谭克非5月31日表示，“对话不能没有原则，沟通不能没有底线”，两国交流困难的责任完全在美方。他抨击美国不顾中方关切事项，制造人为障碍，严重破坏两国互信。奥斯汀对此表示遗憾，并重申拥有强大能力国家彼此对话的重要性，以管控危机，预防局势失控。奥斯汀提到中国最近对美方和盟友的飞机挑衅拦截，希望中方改变其作为，担心在某个时间点发生事件，中方可能非常迅速失控。美国国防部长奥斯汀（LloydAustin）展开任内对印太地区的第7次访问。6月1日，奥斯汀在东京与日本防卫大臣滨田靖一会谈。（路透社视频截图）台学者：美中各有内政外交考量现况无解台湾政治大学名誉教授丁树范接受自由亚洲电台采访分析：“美国总统拜登不太可能取消对李尚福的制裁，他要选连任，如果取消，马上会被共和党扣上对中国软弱，这部分无解。中国当然认为，你要制裁我，我何必跟你对话？这部分我觉得也的确无解。”不过丁树范认为，中方拒绝对话只是展现姿态：“每次中国有演习，美国一定派侦察机侦察，了解中国演习状况，收听无线电等，不管在南海、东海、台海。相信解放军经过两千年南海撞机事件，对这方面训练也会加强，空中发生互撞意外机率不高。”美日防长会面的同时，中国防长李尚福1日抵达新加坡，和新加坡国防部长黄永宏签署合作备忘录，宣布两国成立热线，建立军方高层对话管道。新加坡政府的声明指出：“此种高层通话开放热线，对于加强双方了解与互信相当重要。”6月1日，中国国防部长李尚福抵达新加坡，并与新加坡国防部长黄永宏签署合作备忘录，宣布两国成立热线。（路透社）学者：新加坡或可作为美中热线的转接站台湾的国防安全研究院所长苏紫云接受自由亚洲电台采访表示，中国自知被美国、英国、印度围堵，新加坡作为相对亲美、中立国家，中国借此进行外交铺陈，事实上中国跟新加坡设热线军事意义有限，新加坡和中国在南海没有主权争端，跟中国没有什么军事上可能的对抗。苏紫云说：“中国对美国热线处于铃声响，没有回答状态。中新热线必要时，也许可作为穿梭型转机，华盛顿请新加坡传递讯息这功能。” 丁树范认为，中国外交过去十年基本上失败：“因为习近平一直很强势，像对菲律宾等等。美国已经把菲律宾、韩国拉在旁边，中国看了顾虑，赶紧跟东南亚签国防部长热线对话，南海行为准则有进展。看到美国跟中国周边国家有进展，它也要表现善意，拉拢周边国家，是相互竞争关系。”奥斯汀强调更快速运交关键武器 履行对台安全承诺奥斯汀1日在东京接受日媒《日经亚洲》书面访谈重申美方立场，反对片面改变台海现状，以及中国不应动用武力统一台湾。他並表示，尽管与中国的冲突“既非迫在眉睫，也非无可避免”，美军将持续监测中国的挑衅行动，与盟友和伙伴提升台海和区域和平与战略稳定。奥斯汀提到，拜登政府很快将行使“总统拨款权”，向台湾提供美国武器系统或弹药，这代表华府将能更快速地运交关键武器，履行《台湾关系法》（TheTaiwanRelationsAct）所作承诺。苏紫云表示，奥斯汀部长表达反对片面改变现状的表态和去年一样，华盛顿形塑政策有可信度、稳定的前提下，邀请中方国防部长对话，已作到善尽国际风险控管的义务，释放愿意对话的态度。中国军机用非专业、不安全行动挑衅他国，言下之意，在这情况下有任何责任均由北京承担。苏紫云说：“奥斯汀加码重述美国会依照国防授权法、总统拨款权，近期快速一些军事装备交付台湾，一方面讲给中国听，二方面讲给台湾跟盟国听，美国会遵守对盟国的安全承诺。” 记者：夏小华   责编：许书婷、何平   网编：洪伟```0
-  ## 6/1/2023 - [中共如何令十四亿人患了"六四失忆症"？](https://www.rfa.org/mandarin/yataibaodao/gangtai/hx1-06012023112223.html)
- ```六四事件即将迎来34周年，被中共当局定性的这场"动乱"，相关信息至今仍在中国遭到封杀。自由亚洲电台《亚洲很想聊》节目就此采访吴仁华、郑旭光两名六四亲历者，揭示中国当局如何对海内外舆论进行记忆消除和窜改历史的工程，而他们又是如何在被极权掩盖的破碎讯息中，保存并传播真相。 六四前夕许志永狱中呼吁　以禁食悼念"六四"三十四年不改的心志　纽约六四纪念馆筹建纪实 “六月四日清晨六点多，随学生撤离，经过西长安街、六部口。中南海大门、新华门附近，三辆戒严部队坦克从背后高速追压学生队伍，来不及避难学生受伤、死亡，十一人死，受伤更多，其中有五具死难者学生遗体被送到我任职的中国政法大学。当天上午十点左右，一进校门，看到教学大楼一排课桌上放着五具死难者遗体，课桌上、地面都是一漥洼的鲜血。我和天安门广场的青年教师刘苏里长跪在五具遗体前痛哭，默念永不遗忘。”前中国政法大学助理研究员吴仁华在《亚洲很想聊》节目中，说出驱动他三十余年来研究不辍，陆续出版《六四天安门血腥清场內幕》、《六四屠杀内幕解密》、《六四事件全程实录上、下》三本书，就因亲历那场屠杀。吴仁华说：“我花了无数时间，破解各部队番号、代号，搜集相关官兵聊天纪录，赫然发现戒严部队人数二十五万，十九支部队，其中有十四个陆军集团军，非常惊人的规模。”六四亲历者吴仁华三十余年研究不辍，调查六四真相，出版书籍让年轻人不忘历史。（记者夏小华摄）二十年后追查出涉辗压学生的戒严部队官兵 吴仁华放声痛哭吴仁华认为，真相要完整，更须追查加害者。他针对四十九万官兵资料，透过互联网、谷歌一一验证出三千多名曾参与北京戒严部队成员，大海捞针，从他们与战友间的聊天过程，找到参与在六部口，从背后高速追压学生的天津警备区坦克第一师第一团一零六号坦克二炮手“吴彦辉”。吴仁华说：“终于验证,很确切的身份，当时我趴在电脑前痛哭。  读过那么多古书里头的血腥场面都没法比拟，很多人包括在六部口失去双腿、体育学院学生方政、天安门母亲丁子霖老师都一再说，要找到一零六号坦克里的成员，为何调头从背后冲入学生队伍？是驾驶员擅自行动还是车长命令？我在书里清楚纪录，天津第一师第一团团长罗刚、副团长贾振禄，我都忘不了他们名字。我在推特上公布吴彦辉的号码，是不是当年第一师第一连第一营第一排一零六号坦克二号手？吴说是他。他以为战友找他。推友又把通话纪录发推，令很多推友非常激动。” 八九民运重要领导成员郑旭光（节目截图）六四后各单位清查 郑旭光：“忘记了”、“没看到”等于“解脱”八九六四即将三十四年，为何中国有人对天安门广场发生过的部队辗压学生的事情“没有记忆”或“不敢有记忆”？八九民运重要领导成员，六四之后成为二十一名官方发布的通缉犯之一，服刑两年的郑旭光在节目上对此有深刻的描述。他提到，六四大屠杀后，各单位全面清查，城市内大部份在体制内生存，任职行政、企业、事业单位，都属国家部门，受党组织管。所有人必须交代，八九年从胡耀邦去世后自己跟这运动有什么关系：“你是否上街了？你知道有其他人什么情况？你是什么情况？戒严前你怎么做？戒严后你怎么做？六四开枪后你怎么做？”郑旭光表示，当局用三阶段区分，比如六四再上街和戒严后再上街完全不同。悼念期间上街可能作一般处理，对抗戒严令罪加一等，清场之后还在抵抗那又是另一个情况。很多单位领导不愿让大家受到挫折，就会让你只说自己不说别人。《亚洲很想聊》主持人戴忠仁（左）、前中国政法大学助理研究员吴仁华（右）（节目截图）被迫对官方表态 亲历者为免责成定性“平乱”帮凶郑旭光说：“相信很多人都说不记得、没有看过，得过且过，就算解脱、合格过关。如果没有别人佐证，在这情况下可能你就会说没有参与。你见谁都会说没参与，你怕别人举报你。”郑旭光提到，更重要的是，对党和政府的反对动乱、平息反革命暴乱必须表态。相信在那样的环境下，反对是极少数。因为反对就没有公职，工资没处领，绝大部分人表示坚决支持。郑旭光说：“支持的结果就是，‘暴徒打了、杀死了解放军，是一种动乱，参与的人大部分是不明真相，是被少数坏人利用，坏人需要坚决严惩’，这是一整套的说词，日复一日、年复一年你就要重复的。有时你要被调查，是不是像文革三种人、造反派、打砸抢分子？你是不是参与过八九动乱？你是什么态度？这都是你在体制内攸关调动、升迁，各种各样都有关联的事。”官方透过集体恐惧  重构历史叙事郑旭光说：“中国有一种很强的耻感文化，很难坚持说我是因为怯懦，我是因为种种原因说了亏心话，办了亏心事。最后他慢慢心理记忆会转变，会认为确实是被坏人利用；甚至有很激进的学生最后都自称是无辜的、党是对的，甚至说这些年中国经济大发展幸亏邓小平出手很准，一切源于镇压之后经济就好转，再也没有人乱。就整个重新叙事，官方有官方的叙事，它比较僵化；在民间有民间另一套主流叙事。在当时的压力之下，被迫否认自己、否认自己的同伴，最后它完成一个转换。我可以说，八九年如果说是全民抗议运动，八九之后就经历了一场全民叛变运动。”吴仁华也提到，曾有中学生翻墙看他的书，了解真相后去问他的母亲，母亲谎称没这事。学生追问母亲，八九时不是在北京读大学，怎会啥都不知？母亲才被迫承认。在专制体制下，提真相会付很大政治后果。郑旭光也说，六四是非常痛苦难堪的记忆，经历八九六四那一代，很多宁愿不提。不光自己痛苦，要给孩子回答也很尴尬，是支持还是反对？所以不说为好。这永远是一块精神创伤，需要治愈。至于八九后出生的一代，渠道多元，有网路可翻墙。中共透过外宣对海内外进行六四认知作战 但吴仁华提到，中共利用很大资源发动大外宣、海外社交媒体进行六四历史窜改，很多年轻朋友感谢他挖掘真相。提到近日热门的ChatGpt网络聊天机器人，郑旭光说，他试过用繁体中文和简体中文发问，却得到不同结果。用简体中文问，得到的都是中国官方对六四的说词。郑旭光提到，邓小平接见戒严部队指挥官时用了这场“风波”，刻意回避清场时用北京已发生反革命暴乱的字眼。另从领导阶层的讣告可看出官方态度，杨尚昆去世时尽量淡化，李鹏讣告又回到八九六四定性严厉“暴乱”的重现，可见习近平为首的中共领导人的看法。学者呼吁建立“六四学”共同挖掘历史真相对抗遗忘针对平反八九民运是否有任何希望的问题，郑旭光认为，当年该负责的中共高层都过世了，戒严部队垂垂老矣，看来官方就是“耗着”，把当事人、有记忆的人都耗死为止。吴仁华认为，中国只有发生政治体制变革才可能面对六四。一九九零所谓六四平暴第一年，解放军中央军委曾计划隆重庆祝表彰，被中央政治局负责意识型态的常委否决。中国官方很清楚，这件事不光彩，不值得去做宣传。 吴仁华说，六四比五四运动更重要，海内外却缺乏“六四学”，六四真相至今死亡人数都没个结论，希望更多学校、师生投入“六四学”研究。记者：夏小华   责编：许书婷、何平   网编：洪伟```0
