--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,10 @@
 
+  ## 6/4/2023 - [朝鲜抨击联合国开会讨论朝鲜卫星发射
+
+](https://www.voachinese.com/a/n-korea-slams-un-meeting-20230603/7122131.html)
+ ```朝鲜中央通讯社星期天说，朝鲜谴责联合国安理会应美国的“抢劫要求”开会讨论其最近的卫星发射，并誓言继续拒绝制裁，采取“自卫”行动。```0
+  ## 6/4/2023 - [拜登总统签署债务上限法案](https://www.voachinese.com/a/biden-signs-debt-ceiling-bill-20230603/7122118.html)
+ ```美国总统拜登星期六签署法案，在2025年1月前停止美国政府的债务限制，在政府再过几天就无法支付其账单的时候避免一场潜在的灾难性违约。```0
   ## 6/3/2023 - [从柏林到巴黎，六四悼念不停息：欧洲多地举行六四周年纪念活动](https://www.voachinese.com/a/from-berlin-to-paris-june-4th-memorial-events-20230603/7121857.html)
  ```在六四事件34周年前夕，包括德国柏林、荷兰阿姆斯特丹、法国巴黎等地都举办悼念活动。在“白纸运动”后的第一个六四纪念日，一些90后年轻人加入了抗议的行列。```0
   ## 6/3/2023 - [美国国务院在天安门事件34周年发表声明
@@ -38,7 +44,3 @@
  ```两名极右翼组织“誓言守护者”的成员周五(6月2日)因煽动串谋和其他指控被判处三年监禁——这是与2021年1月6冲击国会山事件相关的最新判决。```0
   ## 6/3/2023 - [即将成为欧盟轮值主席国的西班牙在西方对华关系中发挥关键作用](https://www.voachinese.com/a/spain-plays-key-role-for-west-in-relations-with-china-20230602/7121049.html)
  ```西班牙在下个月担任欧盟轮值主席国时，将会寻求利用其与中国50年的关系，来和平解决俄罗斯对乌克兰发动的战争。```0
-  ## 6/3/2023 - [美财政部高官会晤中国驻美大使](https://www.voachinese.com/a/us-treasury-official-meets-with-china-s-new-ambassador-in-washington-20230602/7121331.html)
- ```美国财政部说，财政部副部长杰伊·尚博格星期五(6月2日)会晤了新任中国驻美大使谢锋并进行了讨论，旨在保持这两个世界最大经济体沟通渠道的畅通。```0
-  ## 6/3/2023 - [美台签署21世纪贸易倡议首批协定，中国批美以经贸幌子对台“敲骨吸髓”](https://www.voachinese.com/a/us-taiwan-signed-trade-deal-which-beijing-said-it-strongly-opposes-20230602/7121058.html)
- ```美国与台湾星期四(6月1日)在华盛顿签署美台《21世纪贸易倡议》首批协定，双方在全部12个议题中的五个议题达成共识。美台官员都表示，这是一个有助于加强并深化彼此经贸关系的重要里程碑。```0
