--- a/新闻/美国之音.md
+++ b/新闻/美国之音.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [中国国防部长：若中美发生激烈冲突对抗 那将是世界“不可承受之痛”](https://www.voachinese.com/a/china-seeks-dialog-says-clash-with-u-s-would-be-unbearable-disaster-20230604/7122151.html)
+ ```中国国防部长李尚福周日（6月4日）表示，如果中美发生激烈的冲突对抗，那将是世界不可承受之痛，但中国寻求对话而非对抗。```0
   ## 6/4/2023 - [朝鲜抨击联合国开会讨论朝鲜卫星发射
 
 ](https://www.voachinese.com/a/n-korea-slams-un-meeting-20230603/7122131.html)
@@ -42,5 +44,3 @@
  ```美国国防部长劳埃德·奥斯汀周六表示，他对中国不愿就军事危机管控进行接触深表关切，并警告说会谈是避免冲突的关键。```0
   ## 6/3/2023 - [又有两名“誓言守护者”因冲击国会山事件被判刑](https://www.voachinese.com/a/oath-keepers-convicted-of-storming-capitol-get-latest-extremist-sentencings-20230602/7121343.html)
  ```两名极右翼组织“誓言守护者”的成员周五(6月2日)因煽动串谋和其他指控被判处三年监禁——这是与2021年1月6冲击国会山事件相关的最新判决。```0
-  ## 6/3/2023 - [即将成为欧盟轮值主席国的西班牙在西方对华关系中发挥关键作用](https://www.voachinese.com/a/spain-plays-key-role-for-west-in-relations-with-china-20230602/7121049.html)
- ```西班牙在下个月担任欧盟轮值主席国时，将会寻求利用其与中国50年的关系，来和平解决俄罗斯对乌克兰发动的战争。```0
