--- a/新闻/自由亚洲电台亚太.md
+++ b/新闻/自由亚洲电台亚太.md
@@ -1,10 +1,10 @@
 
   ## 6/3/2023 - [中国大使馆前“六四大屠杀34周年纪念会” 年轻人为主](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy2-06032023190759.html)
- ```由全美中国学生学者自治联合会主办的“六四大屠杀34周年纪念会”，6月3日下午2点在中国驻美大使馆门前的广场举行。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会，其中尤以年轻人为主。 不受雷雨阻挡年轻世代参与纽约六四游行民主女神像前华盛顿举办六四烛光悼念活动纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报导：接过广场上话筒的女青年 这是一场坚持了三十四年的集会。主办者依然是全美学自联。今年的纪念会依然是在华盛顿中国驻美大使馆前，但已经从使馆对面的街心花园挪到了紧靠花园的马路边上，地界更为开阔；参会人员在马路和人行道上铺开，显得更有气势。由于去年底发生了席卷全国多个城市、以青年人为主的白纸运动，今年的六四大屠杀纪念会尤其强调了年轻人在民主运动中的作用。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会(记者王允拍摄)全美学自联理事、佐治亚大学博士生古懿在开幕词中引用了从美国哥伦比亚大学传出的诗句，“我们是广场上的遗孤，我们是野火后的新芽，”“我们在方舱里自救，我们在铁链下自由，”“我们曾经站在坦克前，我们也曾经站在四通桥上，我们今天依旧站在这里，我们明天还要站到你们面前。”中国民主运动海外联席会议主席魏京生也在发言中为新生代民主力量的崛起而感到欣慰，他说，“现在的年轻人有没出息的，但也有有出息的，就像今天来的年轻人，都是有出息的。”这句话引来众人热烈的掌声。中国民主运动海外联席会议主席魏京生（中）集会现场讲话（记者王允拍摄）这次参会的有不少是从纽约等美国各地赶来的中国民众。据在场的中国民主党全国委员会主席王军涛介绍，这次从纽约就来了17辆各种类型的轿车，总共98人。记者在现场看到，其中多是青年人的面孔。年仅18岁的中国留学生朱欣海更是远道从南面的得克萨斯州休斯敦赶来。他在会议上发言说，“我相信三十四年后的中国年轻人，他们依然是有种的，我相信他们依然是一群有希望的人。”他说，从去年大学校园里年轻人举起白纸的手中，他看到了希望，这一切都表达了中国年轻人的反抗精神。中国留学生朱欣海(记者王允拍摄)与以往不同的是，今年的全美学自联自由精神奖特别颁发给了两个人，一位是去年10月据传在北京四通桥上挂出要求习近平下台横幅的彭立发，另一位是多年来以网名“编程随想”撰写批评中国政府文章并广泛散发的阮晓寰。中国民主党全委会执行长陈闯创律师在给至今还在狱中的阮晓寰颁奖时说，“通过这种匿名的表达，匿名的身份，阮晓寰能够独立思考，不受外界的干扰和压力的影响，这种勇于表达并坚持个人观点的行为，体现了他对自由思想和言论的尊重和追求。在隐私权和互联网自由已经成为当下这个时代非常重要的课题的时候，阮晓寰可以说是个指路明灯。”在纪念仪式结束后，参加集会的二十多人把印有悼念六四罹难者的“国殇之柱”的巨幅招贴布完全牵引开来，从中国大使馆前的道路上缓缓走过。有一些片刻，招贴画上的“国殇之柱”顶端正对着中国大使馆楼顶飘扬的中国国旗。 活动现场照片(记者王允拍摄)记者：王允   编辑：梒青   网编：杰西```0
+ ```由全美中国学生学者自治联合会主办的“六四大屠杀34周年纪念会”，6月3日下午2点在中国驻美大使馆门前的广场举行。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会，其中尤以年轻人为主。 不受雷雨阻挡年轻世代参与纽约六四游行民主女神像前华盛顿举办六四烛光悼念活动纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报导：接过广场上话筒的女青年 这是一场坚持了三十四年的集会。主办者依然是全美学自联。 【中国驻美大使馆前的六四纪念会】六四屠杀34周年，悼念和纪念活动在这里也举行了34次。这次以新一代的年轻人为主。pic.twitter.com/mkm0YfX15X—自由亚洲电台(@RFA_Chinese)June4,2023 今年的纪念会依然是在华盛顿中国驻美大使馆前，但已经从使馆对面的街心花园挪到了紧靠花园的马路边上，地界更为开阔；参会人员在马路和人行道上铺开，显得更有气势。由于去年底发生了席卷全国多个城市、以青年人为主的白纸运动，今年的六四大屠杀纪念会尤其强调了年轻人在民主运动中的作用。多位当年天安门民主运动的学生领袖及各界民主人士超过百人到现场参与集会(记者王允拍摄)全美学自联理事、佐治亚大学博士生古懿在开幕词中引用了从美国哥伦比亚大学传出的诗句，“我们是广场上的遗孤，我们是野火后的新芽，”“我们在方舱里自救，我们在铁链下自由，”“我们曾经站在坦克前，我们也曾经站在四通桥上，我们今天依旧站在这里，我们明天还要站到你们面前。”中国民主运动海外联席会议主席魏京生也在发言中为新生代民主力量的崛起而感到欣慰，他说，“现在的年轻人有没出息的，但也有有出息的，就像今天来的年轻人，都是有出息的。”这句话引来众人热烈的掌声。中国民主运动海外联席会议主席魏京生（中）集会现场讲话（记者王允拍摄）这次参会的有不少是从纽约等美国各地赶来的中国民众。据在场的中国民主党全国委员会主席王军涛介绍，这次从纽约就来了17辆各种类型的轿车，总共98人。记者在现场看到，其中多是青年人的面孔。年仅18岁的中国留学生朱欣海更是远道从南面的得克萨斯州休斯敦赶来。他在会议上发言说，“我相信三十四年后的中国年轻人，他们依然是有种的，我相信他们依然是一群有希望的人。”他说，从去年大学校园里年轻人举起白纸的手中，他看到了希望，这一切都表达了中国年轻人的反抗精神。中国留学生朱欣海(记者王允拍摄)与以往不同的是，今年的全美学自联自由精神奖特别颁发给了两个人，一位是去年10月据传在北京四通桥上挂出要求习近平下台横幅的彭立发，另一位是多年来以网名“编程随想”撰写批评中国政府文章并广泛散发的阮晓寰。中国民主党全委会执行长陈闯创律师在给至今还在狱中的阮晓寰颁奖时说，“通过这种匿名的表达，匿名的身份，阮晓寰能够独立思考，不受外界的干扰和压力的影响，这种勇于表达并坚持个人观点的行为，体现了他对自由思想和言论的尊重和追求。在隐私权和互联网自由已经成为当下这个时代非常重要的课题的时候，阮晓寰可以说是个指路明灯。”在纪念仪式结束后，参加集会的二十多人把印有悼念六四罹难者的“国殇之柱”的巨幅招贴布完全牵引开来，从中国大使馆前的道路上缓缓走过。有一些片刻，招贴画上的“国殇之柱”顶端正对着中国大使馆楼顶飘扬的中国国旗。 活动现场照片(记者王允拍摄)记者：王允   编辑：梒青   网编：杰西```0
   ## 6/3/2023 - [不受雷雨阻挡  年轻世代参与纽约六四游行](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/tj-06032023115304.html)
- ```本周五，纽约曼哈顿市区举办了一场纪念1989年天安门事件的游行，游行队伍中，不乏有些未亲身经历过六四事件的中国年轻人，他们是怎么知道六四运动的？他们又背负着什么样的故事走上纽约街头？ 纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四纪念馆召开揭幕记者会　王丹：为未来储备动力专栏|周末茶馆：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 “打倒共产党！打倒法西斯！勿忘六四！血债血偿！”在倾盆大雨中，盼望中国民主化的民众在纽约曼哈顿市中心坚定地喊着。在六四事件34周年前夕，中国民主党在纽约组织了一场游行，纪念1989年的民主运动。这场游行由纽约六四纪念馆出发，一路经过热闹的纽约市区前往中国驻纽约总领事馆外抗议，这场游行中不乏有年轻支持者。 中国青年：中国政府不该掩盖历史事实周围朋友都不知道六四“30多年后的今天，我们过来纪念。我们永远不会忘记六四，我们觉得未来还是会变的，我们抱着很大的希望，想要中国变得越来越好。”参与此次游行的布鲁（Blue）是一名在美国求学的23岁的中国留学生，他告诉本台记者，在共产党倒台之前，他都不打算回中国，而基于安全问题，布鲁不愿意透露真实姓名。布鲁表示，他在新冠疫情爆发时申请到了护照，便迅速飞离中国：“我经常看YouTube（油管）节目，翻翻推特。就觉得中国以后可能跟西方完全脱钩，之后就闭关锁国，以后再出来就不太容易了，所以当时就比较紧张，能出来就赶快要出来。”布鲁说道，他是因为使用翻牆工具才对六四事件有所了解，不然其实他身边的年轻人都不清楚六四事件：“像国内的很多人他们不知道中国政府有这么多不为人知的一面，很多人不知道真实的历史，像八九六四，我在大学的时候问他们，他们根本就不知道这些事情，很多人不知道新疆屠杀之类的。” 6月2日晚间，中国民主党在纽约曼哈顿市区发起六四游行（记者唐缘媛摄） 中国留学生：白纸运动鼓励我勇敢站出来另一位参与游行的中国留学生小花今年24岁，她告诉本台记者，她是在高中时读到一篇英文论文，才知道了1989年民主运动：“我其实在白纸运动之前就一直很关注一些社会运动的东西，也是白纸运动之后（让我）感觉到更加安全，更加没有那么孤独，可以来参加这些公开悼念活动。”同样基于安全原因，小花不愿意透露真实姓名。小花表示，她很担心参与相关活动会影响到在国内的家人，但是她还是想为中国民主出一份微薄之力：“不应该因为很恐惧就不做事情，而且这也不算在做事情，我只是来参加活动而已。这就是能做到最少的。” 美国公民参与六四游行：我爱中华文化但是中国需要改变与此同时，美国公民阿里（Ali）与他的家人也在中途加入游行，阿里说他的女朋友是中国人，因此他也想为中国的民主化进程出一份力：“美国不是一个完美的国家，但是中国做的事惨无人道。我爱中国这个国家，也爱中国文化，但是我们需要巨大的改变。……我在路上看到这个游行，并问了参与者这个游行有关什么，听完后我就决定加入。”王军涛：每个世代都在用自己的方式追求民主中国针对有青年共同参与游行活动，六四游行发起人、中国民主党全国委员会共同主席王军涛表示，不同世代关注的议题可能不同，身上所背负的历史包袱也不一样，因此年轻世代并非此次游行的主要支持者，不过年轻世代也在以自己的方式争取自由中国。王军涛说：“如果你在这边看到年轻人，你不应该（感到）奇怪，因为我们共同的理想、共同的目标，也感同身受到一个专制暴政的压迫。但是，如果你（在这边）看到的年轻人少，你也不要（感到）奇怪，他们其实也在用他们的方式进行活动。” 记者：唐缘媛   责编：梒青   网编：杰西```0
+ ```本周五，纽约曼哈顿市区举办了一场纪念1989年天安门事件的游行，游行队伍中，不乏有些未亲身经历过六四事件的中国年轻人，他们是怎么知道六四运动的？他们又背负着什么样的故事走上纽约街头？ 纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四纪念馆召开揭幕记者会　王丹：为未来储备动力专栏|周末茶馆：六四34周年　纽约六四纪念馆展现什么？"六四"34周年　纪念馆凝聚两代人民主抗争精神 “打倒共产党！打倒法西斯！勿忘六四！血债血偿！”在倾盆大雨中，盼望中国民主化的民众在纽约曼哈顿市中心坚定地喊着。在六四事件34周年前夕，中国民主党在纽约组织了一场游行，纪念1989年的民主运动。这场游行由纽约六四纪念馆出发，一路经过热闹的纽约市区前往中国驻纽约总领事馆外抗议，这场游行中不乏有年轻支持者。 【纪念#六四34周年纽约游行队伍中的年轻人】6月2日纽约曼哈顿市区举办了一场纪念1989年天安门事件的游行，游行队伍中，不乏有些未亲身经历过六四事件的中国年轻人，他们是怎么知道六四屠杀的？他们又背负着什么样的故事走上纽约街头？pic.twitter.com/pmP56y89uc—自由亚洲电台(@RFA_Chinese)June3,2023 中国青年：中国政府不该掩盖历史事实周围朋友都不知道六四“30多年后的今天，我们过来纪念。我们永远不会忘记六四，我们觉得未来还是会变的，我们抱着很大的希望，想要中国变得越来越好。”参与此次游行的布鲁（Blue）是一名在美国求学的23岁的中国留学生，他告诉本台记者，在共产党倒台之前，他都不打算回中国，而基于安全问题，布鲁不愿意透露真实姓名。布鲁表示，他在新冠疫情爆发时申请到了护照，便迅速飞离中国：“我经常看YouTube（油管）节目，翻翻推特。就觉得中国以后可能跟西方完全脱钩，之后就闭关锁国，以后再出来就不太容易了，所以当时就比较紧张，能出来就赶快要出来。”布鲁说道，他是因为使用翻牆工具才对六四事件有所了解，不然其实他身边的年轻人都不清楚六四事件：“像国内的很多人他们不知道中国政府有这么多不为人知的一面，很多人不知道真实的历史，像八九六四，我在大学的时候问他们，他们根本就不知道这些事情，很多人不知道新疆屠杀之类的。” 6月2日晚间，中国民主党在纽约曼哈顿市区发起六四游行（记者唐缘媛摄） 中国留学生：白纸运动鼓励我勇敢站出来另一位参与游行的中国留学生小花今年24岁，她告诉本台记者，她是在高中时读到一篇英文论文，才知道了1989年民主运动：“我其实在白纸运动之前就一直很关注一些社会运动的东西，也是白纸运动之后（让我）感觉到更加安全，更加没有那么孤独，可以来参加这些公开悼念活动。”同样基于安全原因，小花不愿意透露真实姓名。小花表示，她很担心参与相关活动会影响到在国内的家人，但是她还是想为中国民主出一份微薄之力：“不应该因为很恐惧就不做事情，而且这也不算在做事情，我只是来参加活动而已。这就是能做到最少的。” 美国公民参与六四游行：我爱中华文化但是中国需要改变与此同时，美国公民阿里（Ali）与他的家人也在中途加入游行，阿里说他的女朋友是中国人，因此他也想为中国的民主化进程出一份力：“美国不是一个完美的国家，但是中国做的事惨无人道。我爱中国这个国家，也爱中国文化，但是我们需要巨大的改变。……我在路上看到这个游行，并问了参与者这个游行有关什么，听完后我就决定加入。”王军涛：每个世代都在用自己的方式追求民主中国针对有青年共同参与游行活动，六四游行发起人、中国民主党全国委员会共同主席王军涛表示，不同世代关注的议题可能不同，身上所背负的历史包袱也不一样，因此年轻世代并非此次游行的主要支持者，不过年轻世代也在以自己的方式争取自由中国。王军涛说：“如果你在这边看到年轻人，你不应该（感到）奇怪，因为我们共同的理想、共同的目标，也感同身受到一个专制暴政的压迫。但是，如果你（在这边）看到的年轻人少，你也不要（感到）奇怪，他们其实也在用他们的方式进行活动。” 记者：唐缘媛   责编：梒青   网编：杰西```0
   ## 6/3/2023 - [民主女神像前 华盛顿举办六四烛光悼念活动](https://www.rfa.org/mandarin/yataibaodao/renquanfazhi/wy-06032023092053.html)
- ```1989年六四大屠杀三十四周年纪念日前夕，华盛顿人权组织“共产主义受难者纪念基金会”于6月2日在华盛顿举行了该组织第十届六四烛光悼念活动。天安门民主运动的亲历者，和维吾尔族、藏族以及香港人的代表均在活动中发言。 六四34周年特别报导：接过广场上话筒的女青年纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报道：拾起火把，前行! 纪念仪式的地点位于离华盛顿中国城仅几个街区的民主女神像前的小广场。这座雕像几乎完全仿照1989年民主运动期间，树立在天安门广场上的民主女神像复制而成，但材质已经换成了铜质，尺寸缩小。傍晚路灯亮起后，高大的路灯映照在女神像托起的火炬上，闪着红色的光芒，仿佛那团民主的烈火从未熄灭。小广场夹在三条道路之间，只是一个狭窄的三角形小广场，但在仪式举行期间，这里仍然挤进了五十人左右，既有中国面孔，也有美国民众，越晚人越多。前美国国会众议员弗兰克·沃尔夫（FrankWolf）在仪式上发言说，“我们都记得当年在电视上看到的天安门民主示威活动的景象，军队的坦克冲进了广场，杀死手无寸铁的示威者，碾压车辆，留下满地流血的尸体。”前美国国会众议员弗兰克·沃尔夫（FrankWolf）在仪式上发言。(记者王允拍摄)沃尔夫回顾了1991年，他和另一位国会众议员克里斯.史密斯（ChrisSmith）到北京去要求会见仍被关押的八九民运的参与者。他强调，这么多年过去了，中国政府仍在无差别地迫害不同族群，包括基督徒、藏传佛教徒、维吾尔族穆斯林民众以及法轮功成员。他在提到新疆受迫害的穆斯林民众时特地提高了声音，三次重复了“种族灭绝”这个词。华盛顿人权组织“公民力量”创办人杨建利作为1989年天安门民运亲历者在活动中发言。他借用中国的老话，“白发人送黑发人”，以示对当年在六四大屠杀中遇害的青年人的哀悼。他感叹说，哀伤无以复加，而悲痛从未中止。但杨建利又欣慰地说，去年发生的白纸运动呼应了当年的天安门民主运动，正如三十多年前天安门广场上的青年人一样，这一代年轻人也要求有透明、负责任的政府，和政治自由。美国维吾尔人协会会长爱丽飞达尔.艾力特比尔（ElfidarIltebir）和国际声援西藏运动(ICT)组织研究总监布琼次仁(BhuchungK.Tsering)分别代表自己的族群在活动中发言。美国维吾尔人协会会长爱丽飞达尔.艾力特比尔（ElfidarIltebir）代表自己的族群在活动中发言。(记者王允拍摄)香港民主活动人士邵岚在仪式上回顾了自己成长过程中逐渐认识中国政府专制本质的过程。她惋惜地说，在2019年反送中运动之后，香港固有的法治、民主等传统统统被中国政府剥夺了。她强调，香港人还在坚持抗争，但她追问说，看看国际社会对帮助香港人都做了什么？仪式的最后，众人手举点燃的蜡烛为六四死难者默哀半分钟。但仪式结束后，人们仍旧聚集在民主女神像前，久久不愿离去。多位来参加仪式的香港年轻人在神像前集体唱起了《愿荣光归香港》，歌声激越，在傍晚的街道上远远地飘散开去。仪式的最后，众人手举点燃的蜡烛为六四死难者默哀半分钟。(记者王允拍摄)记者：王允   编辑：申铧   网编：杰西```0
+ ```1989年六四大屠杀三十四周年纪念日前夕，华盛顿人权组织“共产主义受难者纪念基金会”于6月2日在华盛顿举行了该组织第十届六四烛光悼念活动。天安门民主运动的亲历者，和维吾尔族、藏族以及香港人的代表均在活动中发言。 六四34周年特别报导：接过广场上话筒的女青年纽约六四纪念馆开幕六四领袖重申追求自由中国决心六四34周年特别报道：拾起火把，前行! 纪念仪式的地点位于离华盛顿中国城仅几个街区的民主女神像前的小广场。 【华盛顿举办六四烛光悼念活动】#六四34周年纪念日前夕，华盛顿人权组织“#共产主义受难者纪念基金会”于6月2日在华盛顿举行了该组织第十届六四烛光悼念活动。天安门民主运动的亲历者，和维吾尔族、藏族以及香港人的代表均在活动中发言。pic.twitter.com/ekheJBJBTS—自由亚洲电台(@RFA_Chinese)June3,2023 这座雕像几乎完全仿照1989年民主运动期间，树立在天安门广场上的民主女神像复制而成，但材质已经换成了铜质，尺寸缩小。傍晚路灯亮起后，高大的路灯映照在女神像托起的火炬上，闪着红色的光芒，仿佛那团民主的烈火从未熄灭。小广场夹在三条道路之间，只是一个狭窄的三角形小广场，但在仪式举行期间，这里仍然挤进了五十人左右，既有中国面孔，也有美国民众，越晚人越多。前美国国会众议员弗兰克·沃尔夫（FrankWolf）在仪式上发言说，“我们都记得当年在电视上看到的天安门民主示威活动的景象，军队的坦克冲进了广场，杀死手无寸铁的示威者，碾压车辆，留下满地流血的尸体。”前美国国会众议员弗兰克·沃尔夫（FrankWolf）在仪式上发言。(记者王允拍摄)沃尔夫回顾了1991年，他和另一位国会众议员克里斯.史密斯（ChrisSmith）到北京去要求会见仍被关押的八九民运的参与者。他强调，这么多年过去了，中国政府仍在无差别地迫害不同族群，包括基督徒、藏传佛教徒、维吾尔族穆斯林民众以及法轮功成员。他在提到新疆受迫害的穆斯林民众时特地提高了声音，三次重复了“种族灭绝”这个词。华盛顿人权组织“公民力量”创办人杨建利作为1989年天安门民运亲历者在活动中发言。他借用中国的老话，“白发人送黑发人”，以示对当年在六四大屠杀中遇害的青年人的哀悼。他感叹说，哀伤无以复加，而悲痛从未中止。但杨建利又欣慰地说，去年发生的白纸运动呼应了当年的天安门民主运动，正如三十多年前天安门广场上的青年人一样，这一代年轻人也要求有透明、负责任的政府，和政治自由。美国维吾尔人协会会长爱丽飞达尔.艾力特比尔（ElfidarIltebir）和国际声援西藏运动(ICT)组织研究总监布琼次仁(BhuchungK.Tsering)分别代表自己的族群在活动中发言。美国维吾尔人协会会长爱丽飞达尔.艾力特比尔（ElfidarIltebir）代表自己的族群在活动中发言。(记者王允拍摄)香港民主活动人士邵岚在仪式上回顾了自己成长过程中逐渐认识中国政府专制本质的过程。她惋惜地说，在2019年反送中运动之后，香港固有的法治、民主等传统统统被中国政府剥夺了。她强调，香港人还在坚持抗争，但她追问说，看看国际社会对帮助香港人都做了什么？仪式的最后，众人手举点燃的蜡烛为六四死难者默哀半分钟。但仪式结束后，人们仍旧聚集在民主女神像前，久久不愿离去。多位来参加仪式的香港年轻人在神像前集体唱起了《愿荣光归香港》，歌声激越，在傍晚的街道上远远地飘散开去。仪式的最后，众人手举点燃的蜡烛为六四死难者默哀半分钟。(记者王允拍摄)记者：王允   编辑：申铧   网编：杰西```0
   ## 6/2/2023 - [王丹身陷性骚扰指控  "李元钧"首次接受采访](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/wy-06022023123844.html)
  ```6月2日是纽约六四纪念馆正式开幕的日子。正在纽约主持开幕式的八九民运领袖王丹却忽然被台湾男子"李元钧"在社交媒体脸书上指控遭到了对方的性骚扰。本台在第一时间采访到了王丹和"李元钧"双方的说法。 纽约六四纪念馆开幕六四领袖重申追求自由中国决心 6月2日早上纽约时间9点40分，离纽约六四纪念馆正式开幕的时间还有20分钟。本台记者在纪念馆现场问到王丹对性骚扰指控的回应，他说，“一句话，完全没有的事情，既然是完全没有的事情，我也没办法做任何回应，对不对？”王丹的声音背景里是纪念馆现场人群嘈杂的声音。突然而至的指控这一指控是北京时间6月2日下午4点左右出现在脸书上的。账号名为“李元钧”的男子在脸书上贴出一张配图，背景上是悼念1989年六四大屠杀的烛光晚会的模糊景象，中间是四个醒目的白色中文大字“请你道歉”。在贴文中，“李元钧”详述了9年前的2014年6月6日，王丹在纽约法拉盛一家饭店的房间里强吻他，并强暴未遂的过程。接着，“李元钧”又讲述了其它一些细节。“李元钧”在贴文中还说，王丹此后几天一直在语言上骚扰他，“接下来的一周，我却持续面临他时不时的言语挑逗、性骚扰笑话，以及持续明示暗示我，希望我跟他一起睡。”“李元钧”还告诉本台那次美国之行的一些背景，“2014年6月的时候，我刚认识王丹没多久，他便邀请我到美国去，那个时候我才不到20岁。对我来说，王丹是一个名人，我当时对他非常憧憬，能被他邀请到美国，当然是我的荣幸。”但“李元钧”并没有解释当时王丹邀请他的原因。谢姓助理是谁？“李元钧”说，当时王丹身边还有一个谢姓助理，对他的性骚扰是在谢姓助理离开的情况下发生的。事发后，“李元钧”把情况告诉这位助理，但助理并没有提供任何帮助，只是说，王丹是在跟他开玩笑，是在闹他。“李元钧”在稍后的一个脸书贴文中公布了当时他和谢姓助理短信的截图。但这位谢姓助理是谁，“李元钧”并没有公布，本台尚无法查证。“李元钧”在这次旅行后回到台湾。他在贴文中说，他在美国时人生地不熟，也不知道报警，不知道该怎么办，所以一直忍耐。但这件事是他此生最害怕的时光之一，他曾经把自己关在出租屋内好几天，哭泣并恐惧，试图忘记这次美国之行。“李元钧”坦诚自己是同性恋的身份，并表示他曾将美国之行发生的事情，告诉共事过的台北市议员林亮君和当时还在任的台北市议员邱威杰（呱吉）。一个"不惊讶" 一个"不意外"“李元钧”在贴文里强调，此后每到6月4日前后，王丹出面发言的日子，他就感到恶心和不安，“我害怕这个人、我害怕听到他的声音、我害怕看到他的样子。”对于在今年六四前公开此事，“李元钧”告诉本台，他并不是趁这个日子，而是因为最近在台湾有不少政治工作者提出了他们在职场上遭到的性骚扰指控，“这些事情对我影响很大，对我来说，也给了我很多鼓励；我觉得刚好在这个时间点，如果我现在不说的话，我不知道还有什么时候能有勇气把这段话说出来。”据台湾中央社报道，影集《人选之人－造浪者》编剧之一的简莉颖也在6月2日当天在脸书发表长文，指控大学时期曾遭中国流亡诗人贝岭性骚扰。但贝岭对外界回应称，这完全是一个杜撰。对于“李元钧”在六四前公开此事，王丹告诉本台，“我就让外界去判断，我也不想说什么。我想大家都很清楚，我也没必要说什么。”王丹在美国东部时间6月2日早上听闻这一指控后，很快在脸书发帖回应说，他对此有点无奈，但也并不惊讶，这位作者所提的性骚扰一事完全不存在。他同时也表示自己很忙，而他的政治活动不会受到任何影响。他在推特上回应他人询问时也做出了类似的表述。“李元钧”随即在脸书上发帖说，他对王丹这样的回应不意外，但令人失望。他质问说，“就事论事、坦诚错误，一句对不起就这么困难吗？”“李元钧”告诉本台，除了已经公布的与谢助理的短信记录外，他手里还有一些证据，“我还有其他一些在美国留下来的照片和录音，但我还是希望老师可以，希望王丹可以好好面对自己的过错，不要等到我把这些资讯公开出来后，再来说更多的谎，来圆更多的这个其实不该说的谎。”本台记者注意到，到截稿时为止，王丹已经删除了他在推特上有关此事的回应。 记者：王允（记者唐缘媛、黄春梅、夏小华对报道有贡献）  责编：梒青   网编：洪伟```0
   ## 6/2/2023 - [六四34周年特别报导：接过广场上话筒的女青年](https://www.rfa.org/mandarin/yataibaodao/zhengzhi/al-06022023095528.html)
