--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,12 +1,14 @@
 
+  ## 6/4/2023 - [客座評論：台灣人為甚麼要知道六四？](https://www.dw.com/zh/客座評論：台灣人為甚麼要知道六四？/a-65818108?maca=chi-rss-chi-all-1127-rdf)
+ ```2023年6月4日是「六四事件」34週年，這個發生在1989年的中國民運最後以血腥鎮壓收場。曾經這在台灣引起爭取自由民主的共鳴，不過多年過去，中共集權統治愈趨穩固，台灣則持續深化民主，走向不同道路。即便如此，旅居在台的香港媒體人曾志豪疾呼，台灣人不能不關注六四。```0
   ## 6/3/2023 - [“六四”前夕，“四通桥”从中国地图应用程序消失](https://www.dw.com/zh/六四-前夕，-四通桥-从中国地图应用程序消失/a-65816483?maca=chi-rss-chi-all-1127-rdf)
  ```“六四”34周年前夕，在地图应用程序百度地图、高德地图和腾讯地图上用在中国大陆普遍使用的简体中文搜索“四通桥”，将出现“未找到相关地点”的信息。此前一直挂在四通桥上写有桥名的路牌也被拆除。```0
   ## 6/3/2023 - [德语媒体：中国是否会摧毁德国工业？](https://www.dw.com/zh/德语媒体：中国是否会摧毁德国工业？/a-65816455?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》担忧，中国凭借廉价大生产优势，将会威胁到德国产业的根基，德国政界必须尽快采取行动避免去工业化。《新苏黎世报》则刊发客席评论，指出尽管专制中国屡次打击民主运动，但是人类的自由的渴求永远不会被扼杀。```0
-  ## 6/3/2023 - [普京逮捕令：外交豁免权效力有多大？](https://www.dw.com/zh/普京逮捕令：外交豁免权效力有多大？/a-65816473?maca=chi-rss-chi-all-1127-rdf)
- ```南非即将于夏季举办金砖国家峰会，被国际刑事法院发布逮捕令的俄罗斯总统普京也受邀出席。身背逮捕令的普京如何与会？```0
   ## 6/3/2023 - [泽连斯基：乌克兰已做好反攻准备](https://www.dw.com/zh/泽连斯基：乌克兰已做好反攻准备/a-65816464?maca=chi-rss-chi-all-1127-rdf)
  ```乌克兰总统泽连斯基表示，目前已经为反攻战做好了准备，他还提到乌克兰需要更多爱国者导弹以抵御俄军的空袭。与此同时，在俄罗斯境内近日也出现多起空袭事件，但乌克兰方面否认与之有关。```0
+  ## 6/3/2023 - [普京逮捕令：外交豁免权效力有多大？](https://www.dw.com/zh/普京逮捕令：外交豁免权效力有多大？/a-65816473?maca=chi-rss-chi-all-1127-rdf)
+ ```南非即将于夏季举办金砖国家峰会，被国际刑事法院发布逮捕令的俄罗斯总统普京也受邀出席。身背逮捕令的普京如何与会？```0
   ## 6/3/2023 - [《5月35日》：香港「六四記憶」能移植台灣嗎？](https://www.dw.com/zh/《5月35日》：香港「六四記憶」能移植台灣嗎？/a-65816201?maca=chi-rss-chi-all-1127-rdf)
  ```香港六四紀念劇《5月35日》無法在港公演，今年首度移師台灣——這對香港人與台灣人來說有什麼意義？香港逐漸被「清洗」的六四記憶，能在台灣移植、落地嗎？DW採訪幕後團隊與學者理解他們的答案。```0
   ## 6/3/2023 - [美国中央情报局长秘密访问中国](https://www.dw.com/zh/美国中央情报局长秘密访问中国/a-65815540?maca=chi-rss-chi-all-1127-rdf)
