--- a/新闻/德国之声.md
+++ b/新闻/德国之声.md
@@ -1,14 +1,16 @@
 
+  ## 6/4/2023 - [六四週年之際 王丹陷性騷風暴](https://www.dw.com/zh/六四週年之際-王丹陷性騷風暴/a-65818250?maca=chi-rss-chi-all-1127-rdf)
+ ```中國六四學運領導人王丹日前遭一名台灣男子指控性騷擾，包含強吻與強暴未遂。指控者在六四34週年這天召開記者會，要求道歉否則提告。隨後，王丹回應：歡迎提告，支持用法律的方式尋找事情的真相。```0
   ## 6/4/2023 - [客座評論：台灣人為甚麼要知道六四？](https://www.dw.com/zh/客座評論：台灣人為甚麼要知道六四？/a-65818108?maca=chi-rss-chi-all-1127-rdf)
- ```2023年6月4日是「六四事件」34週年，這個發生在1989年的中國民運最後以血腥鎮壓收場。曾經這在台灣引起爭取自由民主的共鳴，不過多年過去，中共集權統治愈趨穩固，台灣則持續深化民主，走向不同道路。即便如此，旅居在台的香港媒體人曾志豪疾呼，台灣人不能不關注六四。```0
+ ```2023年6月4日是「六四事件」34週年，這個發生在1989年的中國民運最後以血腥鎮壓收場。曾經這在台灣引起爭取自由民主的共鳴，不過多年過去，中共集權統治越趨穩固，台灣則持續深化民主，走向不同道路。即便如此，旅居在台的香港媒體人曾志豪疾呼，台灣人不能不關注六四。```0
   ## 6/3/2023 - [“六四”前夕，“四通桥”从中国地图应用程序消失](https://www.dw.com/zh/六四-前夕，-四通桥-从中国地图应用程序消失/a-65816483?maca=chi-rss-chi-all-1127-rdf)
  ```“六四”34周年前夕，在地图应用程序百度地图、高德地图和腾讯地图上用在中国大陆普遍使用的简体中文搜索“四通桥”，将出现“未找到相关地点”的信息。此前一直挂在四通桥上写有桥名的路牌也被拆除。```0
   ## 6/3/2023 - [德语媒体：中国是否会摧毁德国工业？](https://www.dw.com/zh/德语媒体：中国是否会摧毁德国工业？/a-65816455?maca=chi-rss-chi-all-1127-rdf)
  ```《商报》担忧，中国凭借廉价大生产优势，将会威胁到德国产业的根基，德国政界必须尽快采取行动避免去工业化。《新苏黎世报》则刊发客席评论，指出尽管专制中国屡次打击民主运动，但是人类的自由的渴求永远不会被扼杀。```0
-  ## 6/3/2023 - [泽连斯基：乌克兰已做好反攻准备](https://www.dw.com/zh/泽连斯基：乌克兰已做好反攻准备/a-65816464?maca=chi-rss-chi-all-1127-rdf)
- ```乌克兰总统泽连斯基表示，目前已经为反攻战做好了准备，他还提到乌克兰需要更多爱国者导弹以抵御俄军的空袭。与此同时，在俄罗斯境内近日也出现多起空袭事件，但乌克兰方面否认与之有关。```0
   ## 6/3/2023 - [普京逮捕令：外交豁免权效力有多大？](https://www.dw.com/zh/普京逮捕令：外交豁免权效力有多大？/a-65816473?maca=chi-rss-chi-all-1127-rdf)
  ```南非即将于夏季举办金砖国家峰会，被国际刑事法院发布逮捕令的俄罗斯总统普京也受邀出席。身背逮捕令的普京如何与会？```0
+  ## 6/3/2023 - [泽连斯基：乌克兰已做好反攻准备](https://www.dw.com/zh/泽连斯基：乌克兰已做好反攻准备/a-65816464?maca=chi-rss-chi-all-1127-rdf)
+ ```乌克兰总统泽连斯基表示，目前已经为反攻战做好了准备，他还提到乌克兰需要更多爱国者导弹以抵御俄军的空袭。与此同时，在俄罗斯境内近日也出现多起空袭事件，但乌克兰方面否认与之有关。```0
   ## 6/3/2023 - [《5月35日》：香港「六四記憶」能移植台灣嗎？](https://www.dw.com/zh/《5月35日》：香港「六四記憶」能移植台灣嗎？/a-65816201?maca=chi-rss-chi-all-1127-rdf)
  ```香港六四紀念劇《5月35日》無法在港公演，今年首度移師台灣——這對香港人與台灣人來說有什麼意義？香港逐漸被「清洗」的六四記憶，能在台灣移植、落地嗎？DW採訪幕後團隊與學者理解他們的答案。```0
   ## 6/3/2023 - [美国中央情报局长秘密访问中国](https://www.dw.com/zh/美国中央情报局长秘密访问中国/a-65815540?maca=chi-rss-chi-all-1127-rdf)
@@ -93,10 +95,10 @@
  ```为了防止年轻人陷入“毕业即失业”的困境，中国当局使出浑身解数，一面鼓励中小微企业招聘应届生，一面进行公务员和硕士扩招，同时展开舆论宣传攻势。此外，还有高校暗中用力，让数据“更好看”。```0
   ## 5/21/2023 - [航运公会：到2032年船舶回收将翻倍](https://www.dw.com/zh/航运公会：到2032年船舶回收将翻倍/a-65669628?maca=chi-rss-chi-all-1127-rdf)
  ```随着航运业船队转型，变得更加利于气候保护，主要分布于亚洲地区的「船舶坟场」在未来几年内可能会获得空前的关注。```0
-  ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
- ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
   ## 5/21/2023 - [全球育儿成本韩国最高：钱都花在课外班了](https://www.dw.com/zh/全球育儿成本韩国最高：钱都花在课外班了/a-65674902?maca=chi-rss-chi-all-1127-rdf)
  ```研究显示，韩国是全球育儿成本最高的国家，为GDP的7.79倍，大量花费来自大量的课外补习班。中国位居第二，养育一个孩子到18岁的成本是人均GDP的6.9倍，其次是德国（3.64倍）和法国（2.24倍）。```0
+  ## 5/21/2023 - [研究：全球湖泊超过半数正在干涸](https://www.dw.com/zh/研究：全球湖泊超过半数正在干涸/a-65676698?maca=chi-rss-chi-all-1127-rdf)
+ ```一项最新研究显示，全球变暖和人类消耗正在导致全球湖泊干涸。```0
   ## 5/21/2023 - [世界气象组织警告：未来五年将创下最热记录](https://www.dw.com/zh/世界气象组织警告：未来五年将创下最热记录/a-65668526?maca=chi-rss-chi-all-1127-rdf)
  ```世界气象组织表示，厄尔尼诺和温室气体的综合影响将导致气温飙升，并警告说：“我们需要做好准备。”```0
   ## 5/20/2023 - [又一脱口秀演员在中国遭封杀](https://www.dw.com/zh/又一脱口秀演员在中国遭封杀/a-65684797?maca=chi-rss-chi-all-1127-rdf)
