--- a/新闻/法国国际广播电台.md
+++ b/新闻/法国国际广播电台.md
@@ -1,4 +1,6 @@
 
+  ## 6/4/2023 - [港人在压迫下的「六四」悼念：狱中禁食丶香港主教的祈祷……](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230604-%E6%B8%AF%E4%BA%BA%E5%9C%A8%E5%8E%8B%E8%BF%AB%E4%B8%8B%E7%9A%84-%E5%85%AD%E5%9B%9B-%E6%82%BC%E5%BF%B5-%E7%8B%B1%E4%B8%AD%E7%A6%81%E9%A3%9F%E4%B8%B6%E9%A6%99%E6%B8%AF%E4%B8%BB%E6%95%99%E7%9A%84%E7%A5%88%E7%A5%B7)
+ ```今天是「六四事件」34周年，在港府高官明确将之定为「特别日子」後，至少已有四人在昨天被警方以「作出具煽动意图的作为」或「在公众地方行为不检」罪予以拘捕，当中包括天安门母亲运动成员刘家仪和前支联会执委关振邦。但港人今天仍继续以不同方式悼念，前支联会副主席邹幸彤狱中绝食34小时；天主教香港教区主教周守仁「为那些硬了的心祝祷」，愿「社会和国家」得疗愈；美国驻港澳总领事馆把脸书专页的图片转为六四纪念；以及更多以不同方式的悼念。```0
   ## 6/3/2023 - [六四34周年：六四纪念在今日台湾意味着什么？](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E7%89%B9%E5%88%AB%E8%8A%82%E7%9B%AE/20230603-%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4-%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E5%9C%A8%E4%BB%8A%E6%97%A5%E5%8F%B0%E6%B9%BE%E6%84%8F%E5%91%B3%E7%9D%80%E4%BB%80%E4%B9%88)
  ```1989年春夏之交，由青年学生率先在北京发起的中国民主运动以及它随后遭遇的血腥镇压曾吸引全球华语世界的广泛关注，也在一定程度上对当时尚未走出动员戡乱时期的台湾社会产生影响。34年后，在民主体制日渐成熟，本土意识也日渐成型的台湾，八九六四意味着什么 ?台湾华人民主书院理事长曾建元先生接受本台电话采访，介绍了台湾人权团体今年的六四纪念活动，也特别介绍了八九六四与1990年台湾野百合学生运动的关系。曾建元先生表示，台北的六四纪念已经从三十几年前那种纯粹的纪念六四或声讨中共，慢慢变成一个以人权、民主为中心的活动，让台湾人除了反省自身的民主化历程、关心中国大陆的发展，也把视野放到全世界其它正在为民主奋斗的国家。```0
   ## 6/3/2023 - [美国华人纪念六四34周年三大亮点：六四纪念馆开幕，铁链女雕像落成，走线者积极参与](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E7%BE%8E%E5%9B%BD%E5%8D%8E%E4%BA%BA%E7%BA%AA%E5%BF%B5%E5%85%AD%E5%9B%9B34%E5%91%A8%E5%B9%B4%E4%B8%89%E5%A4%A7%E4%BA%AE%E7%82%B9-%E5%85%AD%E5%9B%9B%E7%BA%AA%E5%BF%B5%E9%A6%86%E5%BC%80%E5%B9%95%EF%BC%8C%E9%93%81%E9%93%BE%E5%A5%B3%E9%9B%95%E5%83%8F%E8%90%BD%E6%88%90%EF%BC%8C%E8%B5%B0%E7%BA%BF%E8%80%85%E7%A7%AF%E6%9E%81%E5%8F%82%E4%B8%8E)
@@ -57,5 +59,3 @@
  ```印度尼西亚国防部长苏比安托今天在新加坡举行的香格里拉国防和安全会议上提出了一项结束俄罗斯和乌克兰之间战争的计划，提及冻结战场敌对，战区与被俄罗斯占领区由联合国监督公投等，此举立即受到多数与会者的谴责。```0
   ## 6/3/2023 - [六四前夕传抖音下令禁转“坦克、成龙、天安门”等敏感图文](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20230603-%E5%85%AD%E5%9B%9B%E5%89%8D%E5%A4%95%E4%BC%A0%E6%8A%96%E9%9F%B3%E4%B8%8B%E4%BB%A4%E7%A6%81%E8%BD%AC-%E5%9D%A6%E5%85%8B-%E6%88%90%E9%BE%99-%E5%A4%A9%E5%AE%89%E9%97%A8-%E7%AD%89%E6%95%8F%E6%84%9F%E5%9B%BE%E6%96%87)
  ```消息称中国短影音社群平台“抖音”在六四前夕，私下向各大网红与品牌方发布禁令，要求在3至5日这段期间，禁止发布他们列出一系列与六四有关的敏感图文。所列敏感涉及成龙等引发疑问。```0
-  ## 6/3/2023 - [泽连斯基承认乌战结束前无可能加入北约](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20230603-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%E6%89%BF%E8%AE%A4%E4%B9%8C%E6%88%98%E7%BB%93%E6%9D%9F%E5%89%8D%E6%97%A0%E5%8F%AF%E8%83%BD%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BA%A6)
- ```乌克兰总统泽连斯基承认，在目前与俄罗斯的战争结束之前，乌克兰所坚持的加入北约是"不可能的"。但乌克兰申请加入北约的成员资格问题还是会在7月于立陶宛举行的北约峰会上再次被辩论。```0
